2010-07-24  Patrick Gansterer  <paroga@paroga.com>

        Reviewed by Darin Adler.

        [WINCE] Cleanup defines in Platform.h
        https://bugs.webkit.org/show_bug.cgi?id=42933

        * wtf/Platform.h:

2010-07-23  Rafael Antognolli  <antognolli@profusion.mobi>

        Reviewed by Antonio Gomes.

        [EFL] Cleanup glib support (make it optional)
        https://bugs.webkit.org/show_bug.cgi?id=42480

        Remove gobject/GRefPtr.cpp if not using soup/glib.

        * wtf/CMakeListsEfl.txt:

2010-07-23  Patrick Gansterer  <paroga@paroga.com>

        Reviewed by Adam Roben.

        [WINCE] Implement TCSpinLock.
        https://bugs.webkit.org/show_bug.cgi?id=41792

        Implement the SpinLock with InterlockedExchange from the Windows API.

        * wtf/TCSpinLock.h:
        (TCMalloc_SpinLock::Lock):
        (TCMalloc_SpinLock::Unlock):
        (TCMalloc_SpinLock::IsHeld):
        (TCMalloc_SpinLock::Init):
        (TCMalloc_SlowLock):

2010-07-22  Csaba Osztrogonác  <ossy@webkit.org>

        Unreviewed rolling out r63947 and r63948, because they broke Qt Windows build.

        * jit/JITStubs.cpp:
        * jit/JITStubs.h:

2010-07-22  Gavin Barraclough  <barraclough@apple.com>

        Eeeep! r63947 hosed all non-x86 builds!

        * jit/JITStubs.h:

2010-07-22  Gavin Barraclough  <barraclough@apple.com>

        Reviewed by Oliver Hunt.

        Bug 42818 - [Qt] REGRESSION(63348): jsc is broken
        Speculative fix, need fastcall conventions on Qt/Win.

        * jit/JITStubs.cpp:
        * jit/JITStubs.h:

2010-07-22  Oliver Hunt  <oliver@apple.com>

        Reviewed by Gavin Barraclough.

        Do more constant folding
        https://bugs.webkit.org/show_bug.cgi?id=42867

        Constant fold a few more operations.  SunSpider says this is
        a win but I suspect that's just code motion at play.

        * parser/ASTBuilder.h:
        (JSC::ASTBuilder::makeModNode):
        (JSC::ASTBuilder::makeURightShiftNode):