@@ -2,6 +2,15 @@
 
         Reviewed by Darin Adler.
 
+        [MSVC] Ensure 4 byte alignment on ARM
+        https://bugs.webkit.org/show_bug.cgi?id=42935
+
+        * jit/JITStubs.h: Added #pragma pack(4) around JITStackFrame.
+
+2010-07-24  Patrick Gansterer  <paroga@paroga.com>
+
+        Reviewed by Darin Adler.
+
         [WINCE] Cleanup defines in Platform.h
         https://bugs.webkit.org/show_bug.cgi?id=42933
 
